--- a/Movies.Web/Views/Order/Index.cshtml
+++ b/Movies.Web/Views/Order/Index.cshtml
@@ -23,13 +23,14 @@ else
         </tr>
         </thead>
         <tbody>
-            <tr>
-                <td></td>
-                <td>@Model.Username</td>
-                <td>@Model.Quantity</td>
-                <td></td>
-            </tr>
+        <tr>
+            <td></td>
+            <td>@Model.Username</td>
+            <td>@Model.Quantity</td>
+            <td></td>
+        </tr>
         </tbody>
     </table>
+    <a href="@Url.Action("CreateInvoice", "Order")" class="btn btn-primary">Export to PDF</a>
 }
 
